# cpp-analyzer

./: .gitignore  CLAUDE.md  README.md  _benchmark_report.json  config_patterns.yaml  configs.csv  dependencies.csv  pyproject.toml  requirements.txt  setup.py  turbojpeg.kconfig
.serena/: project.yml
_workspace/: 02_developer_changes.md  03_qa_report.md
_workspace_20260408_034600/: 01_analyst_report.md  02_developer_changes.md  03_qa_report.md
_workspace_20260408_135602/: 01_analyst_report.md  02_developer_changes.md  03_qa_report.md
_workspace_20260411_132517/: 01_analyst_report.md  02_developer_changes.md  03_qa_report.md
_workspace_20260412_204719/: 01_analyst_report.md
_workspace_20260413_001000/: 01_analyst_report.md  02_developer_changes.md  03_qa_report.md
_workspace_evo/: 01_benchmark_report.md  02_reasoner_proposal.md
_workspace_evo_20260412_141853/: 01_benchmark_report.md  02_reasoner_proposal.md
_workspace_evo_20260413_003300/: 01_benchmark_before.json  01_benchmark_report.md  02_reasoner_proposal.md
_workspace_evo_20260413_081713/: 01_benchmark_before.json  01_benchmark_current.json  01_benchmark_report.md  02_reasoner_proposal.md
_workspace_evo_20260413_084047/: 01_benchmark_report.md
_workspace_evo_20260413_091509/: 01_benchmark_before.json  01_benchmark_current.json  02_reasoner_proposal.md
_workspace_evo_20260413_213331/: 01_benchmark_current.json  01_benchmark_report.md
cpp_analyzer/: __init__.py  __main__.py  mcp_server.py
examples/: sample.cpp
scripts/: bench_parse_cache.py  profile_trace.py
tests/: test_dataflow.py  (+2 more)
(+68 files in other folders)
