[project]
name = "cpp-analyzer"
version = "0.1.0"
description = "C++ code analysis framework — index, query, and trace configurations via CLI or MCP"
requires-python = ">=3.10"
dependencies = [
    "libclang>=16.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "networkx>=3.0",
    "PyYAML>=6.0",
    "tabulate>=0.9.0",
    "mcp>=1.0.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.1",
]

[project.scripts]
cpp-analyzer     = "cpp_analyzer.cli.commands:cli"
cpp-analyzer-mcp = "cpp_analyzer.mcp_server:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cpp_analyzer"]

[tool.uv]
dev-dependencies = []
